Custom scrollbar fixes

--- a/src/components/DailyInfo/DailyInfo.module.css
+++ b/src/components/DailyInfo/DailyInfo.module.css
@@ -7,6 +7,7 @@
 .infoHeader {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 24px;
 }
 
 .h2{
